# symbolic-rs

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
projects/math-ast/: Cargo.toml
projects/math-core/: Cargo.toml
projects/math-core/src/: errors.rs  lib.rs
projects/math-core/src/factorial/: mod.rs
projects/math-core/src/operators/: mod.rs
projects/math-core/src/operators/factor_integer/: mod.rs
projects/math-core/src/operators/factorial/: mod.rs
projects/math-core/src/operators/taylor/: mod.rs
projects/math-core/src/primitive/: mod.rs  traits.rs
projects/math-core/src/structures/: mod.rs
projects/math-core/src/structures/list/: mod.rs
projects/math-core/src/structures/primitive/: convert.rs  mod.rs  traits.rs
projects/math-error/: Cargo.toml
projects/math-parser/: Cargo.toml
projects/taylor-series/: Cargo.toml
projects/taylor-series/src/: lib.rs
src/: lib.rs
src/traits/: display.rs  mod.rs  numeric.rs
tests/: main.rs
