[package]
name = "math-ast"
version = "0.2.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "24 game solver with extensions"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/game24-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
num = "0.3"
factorial = "0.2"
