[package]
name = "math-error"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/taylor-rs"
documentation = "https://docs.rs/taylor-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
math-ast = "0.2.0"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
